<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginBottom="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:src="@drawable/myimage"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/divider"
            android:textSize="30sp"
            android:fontFamily="serif"
            android:text="@string/myname" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1dp"
            android:layout_below="@+id/logo"
            android:background="#000000" />


        <TextView
            android:layout_below="@+id/logo"
            android:id="@+id/appliance1"
            android:layout_marginLeft="22sp"
            android:layout_marginTop="22dp"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/number1"
            android:layout_below="@+id/logo"
            android:layout_marginTop="22dp"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android"
            android:layout_toRightOf="@+id/appliance1"
            android:layout_marginLeft="22dp"
            android:textSize="20sp" />

        <TextView
            android:layout_below="@+id/appliance1"
            android:id="@+id/cc"
            android:layout_marginLeft="22sp"
            android:layout_marginTop="22dp"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/cca"
            android:layout_below="@+id/appliance1"
            android:layout_marginTop="22dp"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ghana"
            android:layout_toRightOf="@+id/appliance1"
            android:layout_marginLeft="52dp"
            android:textSize="20sp" />

        <TextView
            android:layout_below="@+id/cc"
            android:id="@+id/email"
            android:layout_marginLeft="22sp"
            android:layout_marginTop="22dp"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/emaila"
            android:layout_below="@+id/cc"
            android:layout_marginTop="22dp"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail"
            android:layout_toRightOf="@+id/appliance1"
            android:layout_marginLeft="12dp"
            android:textSize="20sp" />

        <TextView
            android:layout_below="@+id/email"
            android:id="@+id/phone"
            android:layout_marginLeft="22sp"
            android:layout_marginTop="22dp"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/phonea"
            android:layout_below="@+id/email"
            android:layout_marginTop="22dp"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:layout_toRightOf="@+id/appliance1"
            android:layout_marginLeft="112dp"
            android:textSize="20sp" />

        <TextView
            android:layout_below="@+id/phonea"
            android:id="@+id/slack"
            android:layout_marginLeft="22sp"
            android:layout_marginTop="22dp"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slack"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/slacka"
            android:layout_below="@+id/phonea"
            android:layout_marginTop="22dp"
            android:fontFamily="serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_toRightOf="@+id/appliance1"
            android:layout_marginLeft="132dp"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="11dp"
            android:layout_marginTop="11dp"
            android:layout_below="@+id/slacka"
            android:background="#ffffff" />


        <!--</GridLayout>-->
    </RelativeLayout>

</ScrollView >